AVRO-3716: Build under Java21